@@ -233,10 +233,15 @@ ${body}''')
         else:
             content_type = 'text/plain'
             body = self.plain_body(environ)
+        if isinstance(body, unicode):
+            charset = 'UTF-8'
+        else:
+            charset = None
         resp = Response(body,
             status=self.status,
             headerlist=headerlist,
-            content_type=content_type
+            content_type=content_type,
+            charset=charset
         )
         return resp(environ, start_response)
 
